<resources>

    <string name="app_name">Service Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_service_main">ServiceMain</string>
    <string name="btnStart_name">Start Service</string>
    <string name="btnStop_name">Stop Service</string>
    <string name="app_Header">Android Battery Benchmark Service</string>
    <string name="repeating_scheduled">Repeating alarm will go off in x seconds and every y seconds after based on the elapsed realtime clock</string>
    <string name="repeating_unscheduled">Repeating service shutdown</string>
    <string name="alarm_service_finished">The Alarm service has finished running</string>
    <string name="alarm_service_started">The alarm service has started running</string>
    <string name="alarm_service_label">Sample Alarm Service</string>
    <string name="intervalTime">Enter interval for sensor sleep</string>
    <string name="durationTime">Enter duration for sensor awake</string>

</resources>